00_common/prometheus/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
  labels:
    istio-injection: enabled
