00_common/prometheus/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: prometheus
spec:
  hostnames:
  - prometheus.local.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: eg
    namespace: envoy-gateway
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: prometheus-kube-prometheus-prometheus 
      port: 9090
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
